Cola de comunicacion creada para ambos procesos, se usa un tipo de mensajes generico por ahora

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE
         ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/Cliente")
+add_subdirectory("${PROJECT_SOURCE_DIR}/Cola")
 add_subdirectory("${PROJECT_SOURCE_DIR}/Servidor")
 add_subdirectory("${PROJECT_SOURCE_DIR}/Util")
 
