--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE
 add_subdirectory("${PROJECT_SOURCE_DIR}/Cliente")
 add_subdirectory("${PROJECT_SOURCE_DIR}/Cola")
 add_subdirectory("${PROJECT_SOURCE_DIR}/Servidor")
+add_subdirectory("${PROJECT_SOURCE_DIR}/Signal")
 add_subdirectory("${PROJECT_SOURCE_DIR}/Util")
 
 
